--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "csv-writer": "^1.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
     "multer": "^1.4.5-lts.1",
