--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod_start": "NODE_ENV=production nodemon index.js"
   },
   "author": "Msa",
   "license": "ISC",
@@ -15,19 +16,30 @@
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "csv-writer": "^1.6.0",
+    "del": "^7.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-rev": "^10.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify-es": "^3.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-sass": "^9.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rotating-file-stream": "^3.1.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
