--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Placement Cell Web App",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start": "NODE_ENV=production nodemon index.js"
+    "prod_start": "NODE_ENV=production node index.js"
   },
   "author": "Msa",
   "license": "ISC",
