--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "csv-writer": "^1.6.0",
-    "del": "^7.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
@@ -24,14 +23,12 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^9.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7",
-    "rotating-file-stream": "^3.1.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
   }
